<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/title_settings">
        <CheckBoxPreference
            android:key="pref_key_enable_partial_flashing"
            android:title="@string/title_partial_flashing"
            android:summary="@string/summary_partial_flashing"
            android:defaultValue="true" />

        <cc.calliope.mini_v2.dialog.CustomLinkDialogPreference
            android:key="pref_key_custom_link"
            android:icon="@drawable/ic_editors_custom"
            android:title="@string/title_custom"
            android:summary="@string/summary_custom"
            android:defaultValue="https://google.com"/>

    </PreferenceCategory>
</PreferenceScreen>