<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menuFab"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="end"
    android:padding="4dp">

    <LinearLayout
        android:id="@+id/itemConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_grey_transparent"
            android:paddingHorizontal="@dimen/fab_title_horizontal_padding"
            android:paddingVertical="@dimen/fab_title_vertical_padding"
            android:layout_marginEnd="@dimen/margin_half"
            android:text="@string/menu_fab_connect"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_button"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            app:fabSize="mini"
            app:maxImageSize="24dp"
            app:srcCompat="@drawable/ic_connect"
            app:tint="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/itemScripts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_grey_transparent"
            android:paddingHorizontal="@dimen/fab_title_horizontal_padding"
            android:paddingVertical="@dimen/fab_title_vertical_padding"
            android:layout_marginEnd="@dimen/margin_half"
            android:text="@string/menu_fab_scripts"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_button"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabScripts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            app:fabSize="mini"
            app:maxImageSize="24dp"
            app:srcCompat="@drawable/ic_coding_black_24dp"
            app:tint="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/itemFullScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_grey_transparent"
            android:paddingHorizontal="@dimen/fab_title_horizontal_padding"
            android:paddingVertical="@dimen/fab_title_vertical_padding"
            android:layout_marginEnd="@dimen/margin_half"
            android:text="@string/menu_fab_full_screen"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_button"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabFullScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            app:fabSize="mini"
            app:maxImageSize="24dp"
            app:srcCompat="@drawable/ic_enable_full_screen_24dp"
            app:tint="@color/white" />
    </LinearLayout>

</LinearLayout>